# scilifelab-metadata-templates

./: .gitignore  CITATION.cff  README.md  organisational_metadata_fields.json  organisational_metadata_fields.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: update_genomics_template.yml
genomics/: ENA-example-experiment-metadata-template.xlsx  ENA_target_metadata_fields.yml  README  README.md  create_genomics_template.py  example-genomics_technical_metadata_paired_reads.tsv  example-genomics_technical_metadata_single_read.tsv  genomics_technical_metadata.json  genomics_technical_metadata.tsv  genomics_technical_metadata.yaml  genomics_technical_metadata_paired_reads.json  genomics_technical_metadata_paired_reads.tsv  genomics_technical_metadata_schema.json  genomics_technical_metadata_single_read.json  genomics_technical_metadata_single_read.tsv  genomics_template_schema.json  genomics_template_schema_single_read.json  pull_ENA_exp_run_templates.py  requirements.txt
genomics/ENA_experiment_metadata_fields/: ENA_experiment_metadata_fields.json  ENA_experiment_metadata_template.xlsx  ENA_target_metadata_fields.yml  README.md  experiment.tsv  pull_ENA_exp_run_templates.py
genomics/ENA_metadata_templates/: ENA_metadata_template.json  ENA_metadata_template.xlsx  README.md  sample.tsv
genomics/example_data/: example-genomics_technical_metadata_bam.tsv  example-genomics_technical_metadata_fastq.tsv  example-genomics_technical_metadata_single_read.tsv
genomics/scripts/: ENA_target_metadata_fields.yml  ENA_technical_metadata_fields.json  README.md  run.tsv  (+9 more)
(+17 files in other folders)
