[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scilifelab-metadata-templates"
version = "0.0.1"
description = "Metadata templates and validation tools for SciLifeLab"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "jsonschema==4.23.0",
]

[project.optional-dependencies]
genomics = [
    "pandas==2.2.2",
    "PyYAML==6.0.1",
    "xlsxwriter==3.1.2",
    "tabulate==0.9.0",
    "requests==2.32.4",
    "urllib3==2.6.3",
    "lxml==4.9.3",
    "numpy==2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["scilifelab_metadata_templates*"]

[tool.setuptools.package-data]
scilifelab_metadata_templates = [
  "data/*.yml",
  "data/*.yaml",
]

"scilifelab_metadata_templates.genomics" = [
  "data/*.yml",
  "data/*.yaml",
  "templates/*.json",
  "*.json",
  "*.tsv",
]

[project.scripts]
validate-genomics = "scilifelab_metadata_templates.genomics.validate_json_schema:main"